// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transformHooksServerJs > isStatic 1`] = `
"import { replaceLanguageInUrl } from \\"@inlang/sdk-js/adapter-sveltekit/shared\\";
import { redirect } from \\"@sveltejs/kit\\";
import { initAcceptLanguageHeaderDetector } from \\"@inlang/sdk-js/detectors/server\\";
import { initHandleWrapper } from \\"@inlang/sdk-js/adapter-sveltekit/server\\";
export const handle = initHandleWrapper({
  getLanguage: () => undefined
}).wrap(async ({ event, resolve }) => resolve(event));"
`;

exports[`transformHooksServerJs > languageInUrl and isStatic 1`] = `
"import { replaceLanguageInUrl } from \\"@inlang/sdk-js/adapter-sveltekit/shared\\";
import { redirect } from \\"@sveltejs/kit\\";
import { initAcceptLanguageHeaderDetector } from \\"@inlang/sdk-js/detectors/server\\";
import { initHandleWrapper } from \\"@inlang/sdk-js/adapter-sveltekit/server\\";
export const handle = initHandleWrapper({
  getLanguage: ({ url }) => url.pathname.split(\\"/\\")[1]
}).wrap(async ({ event, resolve }) => resolve(event));"
`;
